fix(web-components): fix focus overlapping text
add padding to the helper so that the focus doesn't block it

1948

--- a/packages/web-components/src/components/ic-input-label/ic-input-label.css
+++ b/packages/web-components/src/components/ic-input-label/ic-input-label.css
@@ -12,6 +12,7 @@ ic-input-label.readonly {
 
 ic-input-label .helpertext {
   margin-top: var(--ic-space-xxxs);
+  padding-bottom: var(--ic-input-label-helpertext-padding, 0);
 }
 
 ic-input-label .helpertext-normal {
